added POST /bins/{id}, changed logic
