# http_api.go
@@ -11,7 +11,6 @@ package main
 //	@name						X-Token
 
 import (
-	"encoding/base64"
 	"fmt"
 	"net/http"
 	"strconv"
@@ -40,8 +39,7 @@ type ApiFirmwareInfoResponse struct {
 	RepoName    string   `json:"repo_name"`
 	CommitId    string   `json:"commit_id"`
 	Boards      []string `json:"boards"`
-	BuiltAt     int64    `json:"built_at"`
-	LoadedAt    int64    `json:"loaded_at"`
+	CreatedAt   int64    `json:"created_at"`
 	LoadedBy    string   `json:"loaded_by"`
 	Md5         string   `json:"md5"`
 	Description string   `json:"description"`
@@ -57,14 +55,7 @@ type ApiAddFirmwareInfoRequest struct {
 	RepoName    string   `json:"repo_name" binding:"required"`
 	CommitId    string   `json:"commit_id"`
 	Boards      []string `json:"boards" binding:"required,min=1,dive,min=1"`
-	BuiltAt     int64    `json:"built_at" binding:"required"`
-	Md5         string   `json:"md5"`
 	Description string   `json:"description"`
-}
-
-type ApiAddFirmwareRequest struct {
-	Info      ApiAddFirmwareInfoRequest `json:"info" binding:"required"`
-	BinBase64 string                    `json:"bin_base64" binding:"required"`
 }
 
 type ApiUserResponse struct {
@@ -73,20 +64,26 @@ type ApiUserResponse struct {
 }
 
 func (api *Api) newFirmwareResponse(info *FirmwareInfo) ApiFirmwareResponse {
+	var binUrl string
+	if info.hasBin() {
+		binUrl = fmt.Sprintf("%s/bin/%d", api.cfg.host, info.Id)
+	} else {
+		binUrl = ""
+	}
+
 	return ApiFirmwareResponse{
 		ApiFirmwareInfoResponse{
 			info.Id,
 			info.RepoName,
 			info.CommitId,
 			info.Boards,
-			info.BuiltAt.Unix(),
-			info.LoadedAt.Unix(),
+			info.CreatedAt.Unix(),
 			info.LoadedBy,
 			info.Md5,
 			info.Description,
 			info.Size,
 		},
-		fmt.Sprintf("%s/bin/%d", api.cfg.host, info.Id),
+		binUrl,
 	}
 }
 
@@ -179,15 +176,15 @@ func (api *Api) getAllFirmwares(c *gin.Context) {
 
 // addFirmware godoc
 //
-//	@Summary	Add firmware information and binary
+//	@Summary	Create firmware record in db
 //	@Schemes
 //	@Accept			json
-//	@Description	Get all firmwares. Only for non-board users
+//	@Description	Create firmare record in db. Upload file to POST /bin/{id} after. Only for non-board users
 //	@Produce		json
-//	@Param			firmware	body		ApiAddFirmwareRequest	true	"firmware info and binary"
-//	@Success		201			{object}	ApiFirmwareResponse		"ok"
-//	@Failure		401			{object}	HttpError				"Invalid auth token"
-//	@Failure		403			{object}	HttpError				"Access is denied"
+//	@Param			firmware	body		ApiAddFirmwareInfoRequest	true	"firmware info"
+//	@Success		201			{object}	ApiFirmwareResponse			"ok"
+//	@Failure		401			{object}	HttpError					"Invalid auth token"
+//	@Failure		403			{object}	HttpError					"Access is denied"
 //	@Security		ApiKeyAuth
 //	@Router			/firmwares [post]
 func (api *Api) addFirmware(c *gin.Context) {
@@ -196,7 +193,7 @@ func (api *Api) addFirmware(c *gin.Context) {
 		return
 	}
 
-	var json ApiAddFirmwareRequest
+	var json ApiAddFirmwareInfoRequest
 	if err := c.ShouldBindJSON(&json); err != nil {
 		c.JSON(http.StatusBadRequest, HttpError{
 			http.StatusBadRequest,
@@ -206,26 +203,15 @@ func (api *Api) addFirmware(c *gin.Context) {
 	}
 
 	info := FirmwareInfo{
-		RepoName:    json.Info.RepoName,
-		CommitId:    json.Info.CommitId,
-		Boards:      json.Info.Boards,
-		BuiltAt:     time.Unix(json.Info.BuiltAt, 0),
+		RepoName:    json.RepoName,
+		CommitId:    json.CommitId,
+		Boards:      json.Boards,
+		CreatedAt:   time.Now(),
 		LoadedBy:    subject.name,
-		LoadedAt:    time.Now(),
-		Md5:         json.Info.Md5,
-		Description: json.Info.Description,
+		Description: json.Description,
 	}
 
-	bytes, err := base64.StdEncoding.DecodeString(json.BinBase64)
-	if err != nil {
-		c.JSON(http.StatusBadRequest, HttpError{
-			http.StatusBadRequest,
-			err.Error(),
-		})
-		return
-	}
-
-	addedInfo, err := api.firmwareSvc.AddFirmware(&info, bytes)
+	addedInfo, err := api.firmwareSvc.CreateFirmware(&info)
 	if err != nil {
 		switch err.(type) {
 		case *Md5DiffersError:
@@ -306,6 +292,83 @@ func (api *Api) getAuthenticatedUser(c *gin.Context) {
 	})
 }
 
+// addFirmwareBinary godoc
+//
+//	@Schemes
+//	@Produce		json
+//	@Summary		Upload firmware binary file
+//	@Description	Upload firmware binary file. Only for non-board users
+//	@Accept			multipart/form-data
+//	@Param			id		path		int		true	"firmware's ID"
+//	@Param			file	formData	file	true	"firmware binary file"
+//	@Success		204
+//	@Failure		400	{object}	HttpError	"File is already uploaded/empty file provided/invalid id"
+//	@Failure		401	{object}	HttpError	"Invalid auth token"
+//	@Failure		403	{object}	HttpError	"Access denied"
+//	@Failure		404	{object}	HttpError	"Firmware not found"
+//	@Security		ApiKeyAuth
+//	@Router			/bin/{id} [post]
+func (api *Api) addFirmwareBinary(c *gin.Context) {
+	_, ok := api.auth(c, &TokenSubject{isBoard: false})
+	if !ok {
+		return
+	}
+
+	idStr := c.Param("id")
+	id, err := strconv.ParseInt(idStr, 10, 64)
+	if err != nil {
+		c.JSON(http.StatusBadRequest, HttpError{
+			http.StatusBadRequest,
+			"id is invalid integer",
+		})
+		return
+	}
+
+	fh, err := c.FormFile("file")
+	if err != nil {
+        c.JSON(http.StatusBadRequest, HttpError{
+            http.StatusBadRequest,
+            err.Error(),
+        })
+	}
+
+	if fh.Size == 0 {
+		c.JSON(http.StatusBadRequest, HttpError{
+			http.StatusBadRequest,
+			"empty file is not allowed",
+		})
+		return
+	}
+
+	f, err := fh.Open()
+	if err != nil {
+		panic(err)
+	}
+
+	bytes := make([]byte, fh.Size)
+	f.Read(bytes)
+	if err := api.firmwareSvc.AddFirmwareFile(id, bytes); err != nil {
+		switch err.(type) {
+		case *FirmwareNotFoundError:
+			c.JSON(http.StatusNotFound, HttpError{
+				http.StatusNotFound,
+				"firmware not found",
+			})
+			return
+		case *FirmwareFileAlreadyUploaded:
+			c.JSON(http.StatusBadRequest, HttpError{
+				http.StatusBadRequest,
+				"file is already uploaded",
+			})
+			return
+		default:
+			panic(err)
+		}
+	}
+
+	c.Status(http.StatusNoContent)
+}
+
 func (api *Api) StartServer() error {
 	r := gin.Default()
 	v1 := r.Group("/api/v1")
@@ -314,6 +377,7 @@ func (api *Api) StartServer() error {
 		v1.GET("/firmwares", api.getAllFirmwares)
 		v1.POST("/firmwares", api.addFirmware)
 		v1.GET("/bin/:id", api.getFirmwareBinary)
+		v1.POST("/bin/:id", api.addFirmwareBinary)
 		v1.GET("/users/me", api.getAuthenticatedUser)
 	}
 	r.GET("/swagger/*any", ginSwagger.WrapHandler(swaggerFiles.Handler))
